movie-app/scss/_movie-card.scss
@use "scss-variables" as *;
@use "mixins" as *;

.movie-card {
  position: relative;
  display: flex;
  flex-direction: column;
  gap: 0.8em;

  &__poster-container {
    position: relative;
    overflow: hidden;
    border-radius: 0.8em;
    box-shadow: 0 0 15px 0 rgba(0 0 0 / 20%);
  }

  &__poster {
    width: 100%;
    aspect-ratio: 2 / 3;
    overflow: hidden;
    background-color: rgb(190 190 190);
  }

  &__img {
    display: block;
    box-sizing: border-box;
    width: 100%;
    height: 100%;
    object-fit: cover;
  }

  &__info {
    display: grid;
    grid-template-columns: 1fr 1fr;
    padding-inline: 0.6em;
  }

  &__title {
    grid-column: 1 / 3;
    color: var(--color-text);
    font-weight: 700;
    font-family: $font-main;
    text-transform: uppercase;
  }

  &__main-genre {
    @include main-text;

    font-size: 0.8rem;
  }

  &__rating {
    @include main-text;

    display: flex;
    gap: 5px;
    justify-content: right;
    box-sizing: border-box;
    font-size: 0.8rem;

    &::before {
      content: "";
      display: block;
      box-sizing: border-box;
      height: 100%;
      aspect-ratio: 1 / 1;
      background-image: url("../assets/svg/star.svg");
      background-size: contain;
    }
  }

  &__extra-info {
    @include main-text;

    position: absolute;
    top: 0;
    left: -100%;
    display: grid;
    grid-template-columns: 60px 1fr;
    grid-template-rows: auto auto 1fr;
    gap: calc(var(--gap) / 3) calc(var(--gap) / 4);
    box-sizing: border-box;
    width: 100%;
    height: 100%;
    max-height: 100%;
    padding: 30px 20px;
    color: var(--color-card-extra-info);
    background-color: var(--color-bg-card-hover);
    transition: left 0.6s ease-in;
  }

  &__poster-container:hover &__extra-info {
    left: 0;
  }

  &__info-title {
    flex-basis: 60px;
    max-width: 60px;
    color: var(--color-card-extra-info-title);
    font-weight: 600;
  }

  &__overview {
    display: -webkit-box;
    grid-column: 1 / 3;
    overflow: hidden;
    text-overflow: ellipsis;
    -webkit-line-clamp: 10;
    -webkit-box-orient: vertical;
  }
}

